backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment                 
metadata:
  namespace: healify
  name: go-healify        
spec:
  replicas: 3                  
  selector:
    matchLabels:
      app: go-healify        
  template:                      
    metadata:
      labels:                    # The labels that will be applied to all of the pods in this deployment
        app: go-healify
    spec:                        # Spec for the container which will run in the Pod
      containers:
      - name: go-healify
        image: deepshx/healify:v4
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000  # Should match the port number that the Go application listens on
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
