backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace : healify
  name: go-healify-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-healify-service
            port:
              number: 9090
